--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <h1>Hola</h1>
+    <h1>La tua Password</h1>
+    <p id="password"></p>
 
 
     <script src="./script.js"></script>
